--- a/.github/workflows/main_weathernodesinitiatives.yml
+++ b/.github/workflows/main_weathernodesinitiatives.yml
@@ -36,7 +36,7 @@ jobs:
           name: node-app
           path: release.zip
 
-  deploy: #deployed is called
+  deploy:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -45,7 +45,7 @@ jobs:
     permissions:
       id-token: write #This is required for requesting the JWT
 
-    steps: #helpz
+    steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
@@ -57,9 +57,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_B59D12688B16437CBF53E44188BCA77B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_2E061E2C2FA14A35812275B681E49F57 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_84C34A82490E4A6A9802675DD5919812 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_79B0A3C4134D48EBBD813234040708CD }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1EC4C0D597C3460E9C22059618033A46 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F4E41129B7DD4DB9A3987606BD78E99C }}
 
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
