--- a/.github/workflows/main_weathernodesinitiatives.yml
+++ b/.github/workflows/main_weathernodesinitiatives.yml
@@ -36,7 +36,7 @@ jobs:
           name: node-app
           path: release.zip
 
-  deploy:
+  deploy: #Hopefully this works
     runs-on: ubuntu-latest
     needs: build
     environment:
