--- a/.github/workflows/main_weathernodesinitiatives.yml
+++ b/.github/workflows/main_weathernodesinitiatives.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - weatherNodesInitiatives
 
 on:
@@ -36,7 +33,7 @@ jobs:
           name: node-app
           path: release.zip
 
-  deploy: #Hopefully this works
+  deploy: 
     runs-on: ubuntu-latest
     needs: build
     environment:
