--- a/.github/workflows/main_weathernodesinitiatives.yml
+++ b/.github/workflows/main_weathernodesinitiatives.yml
@@ -63,6 +63,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'weatherNodesInitiatives'
-          #slot-name: 'Production'
+          slot-name: 'Production'
           package: .
           
