--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.12.7",
     "serve": "^14.0.1",
     "smooth-scroll": "^16.1.3"
   },
@@ -41,4 +42,4 @@
     "gh-pages": "^6.1.1"
   }
 }
-
+ 
