--- a/.github/workflows/main_weathernodesinitiatives.yml
+++ b/.github/workflows/main_weathernodesinitiatives.yml
@@ -61,13 +61,13 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_79B0A3C4134D48EBBD813234040708CD }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_1EC4C0D597C3460E9C22059618033A46 }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_F4E41129B7DD4DB9A3987606BD78E99C }}
 
       - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
+        uses: azure/webapps-deploy@v3 #just another
         with:
           app-name: "weatherNodesInitiatives"
           slot-name: "Production"
